# stavau

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LAUNCH_CHECKLIST.md  README.it.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: acceptance-criteria.md  agent-orchestration.md  agent-team-plan.md  architecture.md  device-compatibility.md  hardening-plan.md  hw-test-protocol.md  install.md  integrations.md  os-native-apis.md  rssi-calibration.md  threat-model.md
packaging/: com.stavau.daemon.plist  entry.py  stavau.service  stavau.spec
src/stavau/: __init__.py  cli.py
src/stavau/config/: __init__.py  settings.py
src/stavau/core/: __init__.py  advmonitor.py  autounlock.py  breaker.py  calibrate.py  classic.py  deviceid.py  distance.py  events.py  gattlink.py  integration.py  monitor.py  presence.py  radiostate.py  session.py  strategy.py
src/stavau/i18n/: __init__.py
src/stavau/i18n/catalogs/: en.json  it.json
src/stavau/platform/: __init__.py  base.py  linux.py  lockstate.py  lockstate_linux.py  lockstate_macos.py  lockstate_windows.py  macos.py  unlock.py  windows.py
src/stavau/ui/: __init__.py  tray.py
src/stavau/ui/gui/: __init__.py  app.py  theme.py  viewmodel.py
tests/: conftest.py  test_advmonitor.py  test_autounlock.py  test_breaker.py  test_calibrate.py  test_classic.py  test_cli.py  test_deviceid.py  test_distance.py  test_events.py  test_gattlink.py  test_gui_logic.py  test_i18n.py  test_integration.py  test_lockstate.py  test_lockstate_linux.py  test_lockstate_macos.py  test_lockstate_windows.py  test_nearby.py  test_platform.py  test_platform_macos.py  test_presence.py  test_radiostate.py  test_session.py  test_settings.py  test_strategy.py  test_tracker.py  test_unlock.py
