[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stavau"
version = "0.3.0"
description = "Privacy by proximity: auto-lock your workstation when you walk away, via BLE proximity of your phone or watch."
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "Davide", email = "davidebr90@gmail.com" }]
keywords = ["privacy", "bluetooth", "ble", "proximity", "screen-lock", "security"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: Microsoft :: Windows :: Windows 10",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Security",
]
dependencies = [
  "bleak>=3.0",
  "platformdirs>=4.0",
]

[project.optional-dependencies]
tray = [
  "pystray>=0.19",
  "pillow>=10.0",
]
macos = [
  "pyobjc-framework-Cocoa>=10",
]
gui = [
  "PySide6>=6.6",
]
dev = [
  "pytest>=8.0",
  "pytest-cov",
  "pytest-asyncio",
  "ruff>=0.6",
  "mypy>=1.10",
  "pre-commit",
]

[project.scripts]
stavau = "stavau.cli:main"

[project.urls]
Homepage = "https://github.com/davidebr90/stavau"
Issues = "https://github.com/davidebr90/stavau/issues"
Changelog = "https://github.com/davidebr90/stavau/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/stavau"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
# winrt is Windows-only; dbus_fast is Linux-only (transitive bleak dependency);
# pyobjc (Foundation/objc/AppKit) is macOS-only; pystray/PIL/numpy ship no
# stubs. Ignore on all platforms so type-checking passes uniformly in CI.
module = [
  "pystray",
  "pystray.*",
  "PIL",
  "PIL.*",
  "numpy",
  "numpy.*",
  "winrt.*",
  "dbus_fast",
  "dbus_fast.*",
  "Foundation",
  "Foundation.*",
  "objc",
  "objc.*",
  "AppKit",
  "AppKit.*",
  "PySide6",
  "PySide6.*",
]
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
# GUI shell: PySide6 is an optional [gui] extra, absent on CI, so Qt base
# classes resolve to Any there. The pure presentation logic lives in
# viewmodel.py, which stays fully strict; only the Qt-touching shell relaxes.
module = ["stavau.ui.gui.app"]
disallow_subclassing_any = false
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
